# house_prices_project_final

./: .gitignore  Dockerfile  README.md  predictions.csv  pyproject.toml
src/: app.py
src/data/: data_preprocessing.py
src/model/: inference.py  model_definition.py  train_model.py
src/static/: style.css
src/templates/: analysis.html  data.html  index.html  predict.html
src/tests/: test_model.py   test_pipeline.py
