[tool.poetry]
name = "house-prices-project"
version = "0.1.0"
description = "A regression project using housing prices dataset with a web visualization."
authors = ["Your Name <your.email@example.com>"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.0,<1.6.0"
numpy = ">=1.21.0,<1.24.0"
scikit-learn = "^1.2.0"
joblib = "^1.2.0"
flask = "^2.3.2"
flask-bootstrap = "^3.3.7.1"
matplotlib = "^3.5"
plotly = "^5.0"
pytest = "^7.4.0"
pytest-flask = "^1.2.0"  # Agregado para facilitar pruebas de Flask
werkzeug = "^2.3.0"  # Asegura compatibilidad con Flask

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"